# AMR_dev

./: .gitmodules  README.md  dependencies.repos  docker-compose.yaml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
dev_packages/path_planning/: CMakeLists.txt  package.xml
dev_packages/path_planning/launch/: djikstra.launch  publish_goal.launch  run.launch
dev_packages/path_planning/rviz/: rviz.rviz
dev_packages/path_planning/script/: dijkstra_planner.py  dijkstra_planner_custom.py  path_follower.py  publish_goal.py
dev_packages/path_planning/src/: grid_to_occ.cpp
dev_packages/script_ctrl/: CMakeLists.txt  package.xml
dev_packages/script_ctrl/src/: square_wave_heading_command.py
dev_packages/ts4_pid_tuning/: CMakeLists.txt  package.xml
dev_packages/ts4_pid_tuning/config/: pos_pid_control.yaml
dev_packages/ts4_pid_tuning/launch/: control_position.launch  start_pid_demo.launch
dev_packages/ts4_pid_tuning/src/: ts4_command.py
docker/: Dockerfile  dockerfile  entrypoint.sh
notes/: l2.txt  l4.txt
